--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <span id="status-text">connecting...</span>
         </div>
         <div class="footer">
-            Created by Husniddin <a href="https://github.com/husniddin" target="_blank"><i class="fab fa-github"></i></a>
+            Created by Husniddin <a href="https://github.com/mehmonov" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
     
